--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -3,6 +3,10 @@
   <head>
     <title>{{ page.title }}</title>
     <!-- link to main stylesheet -->
+    <link rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Questrial">
+    <link rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Lato">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
   <body>
@@ -14,14 +18,14 @@
            <h3><a href="http://www.berkeley.edu">University of California, Berkeley</a></h3>
          </div>
          <div style="float: right; width: 391px; padding: 10px 10px 0 10px;">
-           <img src="banner.png">
+           <img src="images/banner.jpg">
          </div>
       </div>
       <div id="navbar">
-        <ul>
-	  <li><a href="operation.html">OPERATION</a></li>
-	  <li><a href="construction.html">CONSTRUCTION</a></li>
-        </ul>
+	<a href="index.html">OVERVIEW</a>
+	<a href="operation.html">OPERATION</a>
+	<a href="construction.html">CONSTRUCTION</a>
+	<a href="https://github.com/ingolia-lab/turbidostat">GITHUB REPOSITORY</a>
       </div>
       <div id="main">
       
